# highload_static_server

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.nginx  README.md  httpd.conf  main.cpp  nginx.conf
client/: client.cpp
include/: Responses.h  config.h  server.h  staticHander.h
include/http/: http.h  request.h  response.h
src/: Request.cpp  Response.cpp  server.cpp  staticHandler.cpp
static/: wikipedia_russia.html
